--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "stylus": "0.42.3",
-    "socket.io": "*"
+    "socket.io": "*",
+    "indexof": "*"
   }
 }
